force-app/main/default/objects/Test_Plan_Case_Junction__c/Test_Plan_Case_Junction__c.object-meta.xml
<CustomObject>
    <label>Test Plan Case Junction</label>
    <nameField>
        <displayFormat>TPCJ-{0000000}</displayFormat>
        <label>Test Plan Case Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Plan Case Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>