force-app/main/default/objects/Test_Plan_Case_Junction__c/fields/ListOrder__c.field-meta.xml
<CustomField>
    <fullName>ListOrder__c</fullName>
    <label>List Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>