force-app/main/default/objects/Test_Plan_Case_Junction__c/fields/Test_Plan__c.field-meta.xml
<CustomField>
    <fullName>Test_Plan__c</fullName>
    <label>Test Plan</label>
    <referenceTo>Test_Plan__c</referenceTo>
    <relationshipLabel>Test Plan Case Junctions</relationshipLabel>
    <relationshipName>Test_Plan_Case_Junctions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>